# poetry-source-env

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pr.yml  publish.yml
poetry_source_env/: plugin.py
tests/: conftest.py  test_source_env.py
tests/data/simple_project/: pyproject.toml
